Update the file

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Masters of Science in Mechanical Engineering   
+  uni: UCLA
+  year: Dec 2019
   # awards:
-  # summary:
+  # summary: A degree
